--- a/briar-android/src/main/res/values/strings.xml
+++ b/briar-android/src/main/res/values/strings.xml
@@ -101,6 +101,7 @@
 	<string name="show_onboarding">Show Help Dialog</string>
 	<string name="fix">Fix</string>
 	<string name="help">Help</string>
+	<string name="sorry">Sorry</string>
 
 	<!-- Contacts and Private Conversations-->
 	<string name="no_contacts">It seems that you are new here and have no contacts yet.\n\nTap the + icon at the top and follow the instructions to add some friends to your list.\n\nPlease remember: You can only add new contacts face-to-face to prevent anyone from impersonating you or reading your messages in the future.</string>
